syntax = "proto3";

package user;

option go_package = "grpc-server/proto";

service UserService {
    rpc GetUser(UserRequest) returns (UserResponse);
}

message UserRequest {
    string id = 1;
}

message UserResponse {
    string name = 1;
    int32 age = 2;
}